어드민 내용 추가

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
   </head>
+  <header id="header"></header>
   <body>
     <div id="root"></div>
-    <script type="App.js"></script>
   </body>
 </html>
