--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_dfyVaBMPwzwDRBbDyroDE0kDgIWLpn0" async defer></script>
     <title>React App</title>
   </head>
   <body>
